Lincoln profile picture was modified in the css file.  It has a width and height of 200px and is rounded.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,4 +37,9 @@ button.submit {
     width: fit-content;
   }
   
-  
+.avatar {
+    vertical-align: middle;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}  
