--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,9 @@ button.submit {
     display: inline-block;
     margin: 0 auto;
     width: 100%;
+    background-image: url("jumbotron-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
   
   .custom-select {
@@ -43,3 +46,31 @@ button.submit {
     height: 200px;
     border-radius: 50%;
 }  
+
+.washington {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.jefferson {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.troosevelt {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.fdr {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
