removed css stylings and commented out avatar for the time being

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,37 +40,9 @@ button.submit {
     width: fit-content;
   }
   
-.avatar {
+/* .avatar {
     vertical-align: middle;
     width: 200px;
     height: 200px;
     border-radius: 50%;
-}  
-
-.washington {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.jefferson {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.troosevelt {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.fdr {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
+}   */
